# PR2-Sim-Pure

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pull_request_template.md
.claude/rules/: acceptance.md  pr2-safety.md  project-layout.md  ros2-jazzy.md
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  ros_entrypoint.sh
cc_ws/: 导纳控制最小测试命令序列.md  运行前设置.md
cc_ws/src/: cartesian_controllers
docs/: REPOSITORY_DESCRIPTION.md
pr2_ws/: README.md
pr2_ws/scripts/: pr2_base_fixed_cmd.py
pr2_ws/src/pr2_controller/: README.md  README_IK.md  package.xml  setup.cfg  setup.py
pr2_ws/src/pr2_controller/launch/: pr2_ee_pose.launch.py  pr2_left_arm_ik.launch.py  pr2_mujoco_sim.launch.py
pr2_ws/src/pr2_controller/pr2_bringup/: CMakeLists.txt
pr2_ws/src/pr2_controller/pr2_controller/: __init__.py  pr2_sim_ros.py
pr2_ws/src/pr2_controller/pr2_mobile_controller/: package.xml
pr2_ws/src/pr2_controller/scripts/: pr2_gripper_test.py  pr2_sim.py  pr2_test.py
pr2_ws/src/pr2_mujoco_bridge/: README.md  README_ACCEPTANCE_FEAT.md  README_IK.md  README_WBC_STACK.md  package.xml  pytest.ini  setup.cfg  setup.py
pr2_ws/src/pr2_mujoco_bridge/docs/: 2026-04-27_whole_body_admittance_meeting_plan.md  xml_force_limit_audit.md
pr2_ws/src/pr2_mujoco_bridge/launch/: pr2_admittance_validation.launch.py  pr2_admittance_validation_omni.launch.py  pr2_arm_admittance_validation.launch.py  pr2_arm_force_1d.launch.py  pr2_arm_force_3d.launch.py  pr2_ee_pose.launch.py  pr2_left_arm_ik.launch.py  pr2_mobile_manipulator_stack.launch.py  pr2_mujoco_sim.launch.py  pr2_whole_body_force.launch.py  pr2_whole_body_force_amplified.launch.py
pr2_ws/src/pr2_mujoco_bridge/pr2_mujoco_bridge/: admittance_core.py  pr2_admittance_stub.py  pr2_admittance_validator.py  pr2_arm_admittance.py  pr2_arm_admittance_controller.py  pr2_arm_admittance_validator.py  pr2_arm_force_injector.py  pr2_base_accel_integrator.py  pr2_base_admittance.py  pr2_ee_pose_publisher.py  pr2_force_projector.py  pr2_left_arm_ik.py  pr2_motion_logger.py  pr2_null_space_stub.py  pr2_sim_ros.py  pr2_state_estimator.py  pr2_wbc_coordinator.py
scripts/: ai-claude.sh  ai-codex.sh  container_smoke.sh  verify_ai_project.sh
src/pr2_controller/pr2_description/: package.xml
src/pr2_controller/pr2_mujoco_hardware/: package.xml
src/pr2_ros2_stack/pr2_bringup/: package.xml
src/pr2_ros2_stack/pr2_mujoco_hardware/: CMakeLists.txt
src/pr2_ros2_stack/pr2_mujoco_hardware/include/pr2_mujoco_hardware/: pr2_mujoco_hardware.hpp
src/pr2_ros2_stack/pr2_mujoco_publisher/: package.xml
unitree_mujoco/: README.md
unitree_mujoco/simulate/: CMakeLists.txt  config.yaml
unitree_mujoco/simulate/src/: main.cc
unitree_mujoco/simulate/src/unitree_sdk2_bridge/: unitree_sdk2_bridge.cc  unitree_sdk2_bridge.h
unitree_mujoco/unitree_robots/pr2/: robot_pr2.xml  scene.xml
(+29 files in other folders)
